test/visibility/private/uses/accessExcept.good
accessExcept.chpl:3: error: 'a' undeclared (first use this function)
